--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,4 +1,4 @@
-format_version: 1.1.0
+format_version: 1.3.1
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
 app:
@@ -15,16 +15,6 @@ workflows:
         inputs:
           - wait_for_boot: "false"
           - emulator_name: "Nexus_5X_API_22"
-
-    - script:
-        title: Input check
-        inputs:
-        - content: |-
-            #!/bin/bash
-            if [ -z "$BITRISE_EMULATOR_SERIAL" ]; then echo "BITRISE_EMULATOR_SERIAL not set"; exit 1; fi
-            if [[ $(adb devices | grep $BITRISE_EMULATOR_SERIAL) = "" ]]; then echo "Couldn't find emulator with serial: $BITRISE_EMULATOR_SERIAL"; exit 1; fi
-            if [[ ! -d "$ANDROID_HOME" ]]; then exit 1; fi
-            echo "BITRISE_EMULATOR_SERIAL: ${BITRISE_EMULATOR_SERIAL}"
     - path::./:
         title: Wait for the emulator to boot
         is_always_run: false
@@ -128,7 +118,7 @@ workflows:
       # if you want to share this step into a StepLib
       - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
       - STEP_ID_IN_STEPLIB: wait-for-android-emulator
-      - STEP_GIT_VERION_TAG_TO_SHARE: $RELEASE_VERSION
+      - STEP_GIT_VERION_TAG_TO_SHARE: $STEP_VERSION
       - STEP_GIT_CLONE_URL: https://github.com/bitrise-steplib/steps-wait-for-android-emulator.git
     description: |-
       If this is the first time you try to share a Step you should
