--- a/bitrise.yml
+++ b/bitrise.yml
@@ -5,15 +5,23 @@ app:
   envs:
   - STEP_VERSION: 0.9.0
 
+  - BITRISE_EMULATOR_NAME: android-22-armeabi-v7a
+  - EMULATOR_PLATFORM: android-22
+  - EMULATOR_TAG: google_apis
+
 workflows:
   test:
     before_run:
     - go-tests
     steps:
-    - create-android-emulator:
+    - git::https://github.com/bitrise-steplib/steps-create-android-emulator.git@master:
+        title: Create emulator
+        # run_if: .IsCI
         inputs:
-        - name: android-24-armeabi-v7a
-    - start-android-emulator:
+        - name: $BITRISE_EMULATOR_NAME
+        - platform: $EMULATOR_PLATFORM
+        - tag: $EMULATOR_TAG
+    - git::https://github.com/bitrise-steplib/steps-start-android-emulator.git@tools:
         title: Run AVD
         inputs:
           - wait_for_boot: "false"
