--- a/bitrise.yml
+++ b/bitrise.yml
@@ -14,14 +14,14 @@ workflows:
     before_run:
     - go-tests
     steps:
-    - git::https://github.com/bitrise-steplib/steps-create-android-emulator.git@master:
+    - create-android-emulator:
         title: Create emulator
         # run_if: .IsCI
         inputs:
         - name: $BITRISE_EMULATOR_NAME
         - platform: $EMULATOR_PLATFORM
         - tag: $EMULATOR_TAG
-    - git::https://github.com/bitrise-steplib/steps-start-android-emulator.git@tools:
+    - start-android-emulator:
         title: Run AVD
         inputs:
           - wait_for_boot: "false"
