--- a/bitrise.yml
+++ b/bitrise.yml
@@ -5,33 +5,57 @@ app:
   envs:
   - STEP_VERSION: 1.0.2
 
-  - BITRISE_EMULATOR_NAME: android-22-armeabi-v7a
-  - EMULATOR_PLATFORM: android-22
-  - EMULATOR_TAG: google_apis
-
 workflows:
   test:
     before_run:
     - go-tests
     steps:
-    - create-android-emulator:
-        title: Create emulator
-        # run_if: .IsCI
+    - change-workdir:
         inputs:
-        - name: $BITRISE_EMULATOR_NAME
-        - platform: $EMULATOR_PLATFORM
-        - tag: $EMULATOR_TAG
-    - start-android-emulator:
-        title: Run AVD
-        inputs:
-          - wait_for_boot: "false"
+        - path: _tmp
+    - avd-manager:
     - path::./:
         title: Wait for the emulator to boot
         is_always_run: false
     - script:
         title: Stop Android Emulator
         inputs:
-        - content: adb -s $BITRISE_EMULATOR_SERIAL emu kill
+        - content: pkill -f qemu-system-i386
+    - script:
+        title: Create hanging adb
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            set -e
+            mkdir -p platform-tools
+            cat /dev/null > adb_log
+            cat /dev/null > platform-tools/adb
+            cat >> platform-tools/adb <<'EOF'
+            #!/usr/bin/env bash
+
+            echo "$@" >> adb_log
+            [[ "$1" == "kill-server" ]] && exit 0
+            sleep 120
+            EOF
+            chmod +x platform-tools/adb
+    - path::./:
+        title: Should fail with timeout - Wait for the emulator to boot
+        is_always_run: false
+        is_skippable: true
+        inputs:
+        - boot_timeout: 60
+        - android_home: ./
+    - script:
+        title: check if commands are called
+        is_always_run: false
+        is_skippable: false
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            set -ex
+            [[ $(grep -c "kill-server" ./adb_log) == "3" ]] && 
+             [[ $(grep -c -- '-s emulator-5554 exec-out echo "$(getprop dev.bootcomplete)-$(getprop sys.boot_completed)-$(getprop init.svc.bootanim)"' ./adb_log) == "3" ]] || 
+             exit 1
 
   go-tests:
     before_run:
@@ -41,7 +65,7 @@ workflows:
         title: Export go files to test
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
 
             no_vendor_paths="$(go list ./... | grep -v vendor)"
@@ -50,7 +74,7 @@ workflows:
         title: Err check
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
 
             errcheck -asserts=true -blank=true $GOLIST_WITHOUT_VENDOR
@@ -58,7 +82,7 @@ workflows:
         title: Go lint
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
 
             while read -r line; do
@@ -74,7 +98,7 @@ workflows:
         title: Go test
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
             go test ./...
 
@@ -84,7 +108,7 @@ workflows:
         title: Install required testing tools
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
             
             # Check for unhandled errors
@@ -102,7 +126,7 @@ workflows:
         title: Dependency update
         inputs:
         - content: |
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
             go get -u -v github.com/tools/godep
 
@@ -120,7 +144,7 @@ workflows:
         title:
         inputs:
         - content: |
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -e
 
             export CI=true
@@ -133,7 +157,7 @@ workflows:
     - script:
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
             stepman audit --step-yml ./step.yml
 
@@ -171,7 +195,7 @@ workflows:
     - script:
         inputs:
         - content: |-
-            #!/bin/bash
+            #!/usr/bin/env bash
             set -ex
             bitrise share start -c ${MY_STEPLIB_REPO_FORK_GIT_URL}
             bitrise share create --stepid ${STEP_ID_IN_STEPLIB} --tag ${STEP_GIT_VERION_TAG_TO_SHARE} --git ${STEP_GIT_CLONE_URL}
