--- a/e2e/bitrise.yml
+++ b/e2e/bitrise.yml
@@ -1,19 +1,16 @@
-
 format_version: "11"
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
 workflows:
   test_smoke:
+    before_run:
+    - _start_emulator
     steps:
-    - avd-manager:
-        title: Start Android Emulator
     - path::./:
         title: Wait for the Emulator boot
         is_always_run: false
-    - script:
-        title: Stop Android Emulator
-        inputs:
-        - content: pkill -f qemu-system-i386
+    after_run:
+    - _stop_emulators
 
   test_hanging_adb:
     steps:
@@ -30,13 +27,13 @@ workflows:
             fi
 
   utility_test_hanging_adb:
+    before_run:
+    - _start_emulator
     steps:
     - change-workdir:
         title: Chnage workdir to ./_tmp
         inputs:
         - path: _tmp
-    - avd-manager:
-        title: Start Android Emulator
     - script:
         title: Create hanging adb
         inputs:
@@ -72,11 +69,13 @@ workflows:
             [[ $(grep -c "kill-server" ./adb_log) == "3" ]] && 
              [[ $(grep -c -- '-s emulator-5554 shell getprop dev.bootcomplete' ./adb_log) == "3" ]] || 
              exit 1
+    after_run:
+    - _stop_emulators
 
   test_daemon_restart:
+    before_run:
+    - _start_emulator
     steps:
-    - avd-manager:
-        title: Start Android Emulator
     - script:
         title: Stop Gradle daemon
         inputs:
@@ -86,7 +85,22 @@ workflows:
             $ANDROID_HOME/platform-tools/adb kill-server
     - path::./:
         title: Wait for the Emulator boot
+    after_run:
+    - _stop_emulators
+
+  _stop_emulators:
+    steps:
     - script:
-        title: Stop Android emulator
         inputs:
-        - content: pkill -f qemu-system-i386
+        - content: |-
+            #!/bin/env bash
+            adb devices | grep emulator | cut -f1 | while read line; do adb -s $line emu kill; done
+
+  _start_emulator:
+    steps:
+    - avd-manager:
+        title: Start Android Emulator
+        inputs:
+        - tag: default
+        - abi: x86_64
+        - api_level: 29
