--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2,15 +2,19 @@ format_version: "11"
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
 workflows:
+  generate-readme:
+    steps:
+    - git::https://github.com/bitrise-steplib/steps-readme-generator.git@main: { }
+
   check:
     steps:
     - git::https://github.com/bitrise-steplib/steps-check.git:
 
   e2e:
     steps:
-      - git::https://github.com/bitrise-steplib/steps-check.git:
-          inputs:
-            - workflow: e2e
+    - git::https://github.com/bitrise-steplib/steps-check.git:
+        inputs:
+        - workflow: e2e
 
   sample:
     steps:
