--- a/bitrise.yml
+++ b/bitrise.yml
@@ -8,7 +8,7 @@ workflows:
 
   check:
     steps:
-    - git::https://github.com/bitrise-steplib/steps-check.git:
+    - git::https://github.com/bitrise-steplib/steps-check.git: { }
 
   e2e:
     steps:
