--- a/bitrise.yml
+++ b/bitrise.yml
@@ -12,7 +12,7 @@ workflows:
 
   e2e:
     steps:
-    - git::https://github.com/bitrise-steplib/steps-check.git:
+    - git::https://github.com/bitrise-steplib/steps-check.git@secret-filtering:
         inputs:
         - workflow: e2e
 
