5 min timeout for starting an amulator

--- a/e2e/bitrise.yml
+++ b/e2e/bitrise.yml
@@ -100,6 +100,7 @@ workflows:
     steps:
     - git::https://github.com/bitrise-steplib/steps-avd-manager@MOB-268-hanging-sdkmanager:
         title: Start Android Emulator
+        timeout: 300
         inputs:
         - tag: default
         - abi: x86_64
