Only check sys.boot_completed

--- a/step.yml
+++ b/step.yml
@@ -32,7 +32,7 @@ inputs:
     description: |
       Maximum time to wait for emulator to boot.
     is_required: true
-- android_home: $ANDROID_HOME
+- android_home: $ANDROID_SDK_ROOT
   opts:
     title: Android sdk path
     description: Android sdk path
